app/javascript/styles/_schedule_grid.scss
$schedule-grid-background: map-get($map: $theme-colors, $key: 'light');
$schedule-grid-event-border-radius: 14px;
$signed-up-event-background-color: rgba(0, 0, 0, 0.4);

.schedule-grid {
  border-width: 1px;
  border-top-width: 0;
  border-style: solid;
  border-color: $nav-tabs-border-color;
  background-color: $schedule-grid-background;
  min-height: 450px;
  display: flex;
  flex-direction: column;
  align-items: stretch;
}

.schedule-grid-content {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  min-width: min-content;
  min-height: 300px;
  background-image: linear-gradient(90deg, rgba(0, 0, 0, .1) 0%, rgba(0, 0, 0, .1) 1%, transparent 2%, transparent);
}

.schedule-grid-block {
  border-top: 2px rgba(0, 0, 0, .1) solid;
  padding-top: 2px;
  padding-bottom: 2px;
}

.schedule-grid-event {
  // default colors, overrideable by event categories
  background-color: lighten(map-get($theme-colors, 'info'), 50%);
  border: 1px map-get($theme-colors, 'info') solid;
  border-radius: $schedule-grid-event-border-radius;
  overflow: hidden;

  &.full {
    border-width: 0;
    color: fade-out(black, 0.3);
  }

  &.signed-up {
    background-color: map-get($theme-colors, 'info');
    border-color: map-get($theme-colors, 'info');
    color: white;
  }

  &.unlimited {
    // border-right: 0;
    border-radius: 0;
    // border-top-right-radius: 0;
    // border-bottom-right-radius: 0;
  }
}

.schedule-grid-row-header {
  position: sticky;
  left: 0;
  z-index: 10;
  padding-right: 2px;
  border-top: 2px rgba(0, 0, 0, .1) solid;
  background-color: rgba(255, 255, 255, 0.9);
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

.schedule-grid-row-header-label {
  min-width: 0;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.event-fullness-unlimited .availability-bar .unavailable {
  background-color: lighten(map-get($theme-colors, 'info'), 50%);
}

.event-fullness-below-minimum .availability-bar .unavailable {
  background-color: lighten(map-get($theme-colors, 'danger'), 20%);
}

.event-fullness-minimum .availability-bar .unavailable {
  background-color: lighten(map-get($theme-colors, 'warning'), 20%);
}

.event-fullness-preferred .availability-bar .unavailable {
  background-color: lighten(map-get($theme-colors, 'success'), 20%);
}

.event-fullness-full .availability-bar .unavailable {
  background-color: lighten(map-get($theme-colors, 'primary'), 20%);

  &.full {
    opacity: 1.0;
  }
}

.event-fullness-no-slots {
  background-color: $gray-300;
}

.event-extended-counts {
  background-color: rgba(255, 255, 255, 0.6);
  border-right: 1px rgba(0, 0, 0, 0.6) solid;
  z-index: -1;
}

.availability-bar {
  background-color: transparent;
  // border-top: 1px $gray-300 solid;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  z-index: -2;

  .available {
    background-color: $schedule-grid-background;
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;

    .full & {
      background-color: white;
    }

    .signed-up & {
      background-color: rgba(0, 0, 0, 0.6);
    }
  }

  .unavailable {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    border-top-right-radius: $schedule-grid-event-border-radius;
    border-bottom-right-radius: $schedule-grid-event-border-radius;
  }

  &.unlimited {
    border-radius: 0;

    .unavailable {
      background: linear-gradient(to right, transparent, $schedule-grid-background);
      border-radius: 0;

      .signed-up & {
        background: linear-gradient(to right, transparent, rgba(0, 0, 0, 0.3));
      }
    }
  }
}

